--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <span class="name"></span>
         は修論を
         <span class="progress-per">0</span>
-        %書きました
+        %書きました (目標に対する書き上がったページ数。実験の進捗は含まない)
       </p>
       <div class="progress progress-striped active">
         <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
